<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="#240612">

    <TextView
        style="@style/MyStyle.big"
        android:text="@string/contactButton"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

        <TextView
            style="@style/MyStyle"
            android:text="@string/kontaktInformation"
            android:textSize="14sp"
            android:gravity="bottom"
            android:id="@+id/kontaktInfo"/>

        <TextView
            style="@style/MyStyle"
            android:textSize="14sp"
            android:autoLink="phone"
            android:text="@string/myPhoneNumber"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cvbild"/>


    </LinearLayout>
<RelativeLayout
    android:paddingTop="10dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/personligInformation"
        android:layout_alignParentTop="true"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Curriculum Vitae"
            android:id="@+id/cv"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_assignment_ind_white_24dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kandidat arbete"
            android:id="@+id/kandidat"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_assignment_white_24dp"
            />
    </LinearLayout>


</RelativeLayout>

</LinearLayout>