<LinearLayout
    style="@style/MyStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/thermometer"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/thermometer"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/MyStyle"
                android:text="@string/Temperature"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
<!--
                <ProgressBar
                    android:id="@+id/tProg"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    />
-->
                <TextView
                    style="@style/MyStyle"
                    android:textSize="10sp"
                    android:text="@string/tempDescription"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/projectText">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/thermometer" />

        <TextView
            style="@style/MyStyle"
            android:text="@string/projectInformationButton"
            android:gravity="center"
            android:typeface="serif"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactText">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/thermometer" />

        <TextView
            style="@style/MyStyle"
            android:text="@string/contactButton"
            android:gravity="center"
            android:typeface="serif"
            />
    </LinearLayout>
</LinearLayout>

