<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#240612">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/topLinear"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/thermometer"
            android:layout_alignParentLeft="true"
            android:id="@+id/tempIcon"
            android:contentDescription="@string/tempDescription" />

        <TextView
            style="@style/MyStyle.big"
            android:text="@string/Temperature"
            android:layout_toRightOf="@+id/tempIcon"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_help_white_24dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/helpButton"
            android:id="@+id/helpButton"/>

    </RelativeLayout>

    <com.allander.johan.remotetemperature.CanvasView
        android:id="@+id/signature_canvas"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topLinear"
        android:layout_above="@+id/bottomLinear"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottomLinear"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#67083c"
            android:layout_weight="0.25">

            <TextView
                style="@style/MyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IDAG"
                android:id="@+id/idag"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.25"
            android:background="#420925">

            <TextView
                style="@style/MyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VECKA"
                android:id="@+id/vecka"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#67083c"
            android:layout_weight="0.25">

            <TextView
                style="@style/MyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MÅNAD"
                android:id="@+id/manad"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#420925"
            android:layout_weight="0.25">

            <TextView
                style="@style/MyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ÅR"
                android:id="@+id/ar"/>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>